--- a/CoffeeManagement/CoffeeManagement/UserPage.resx
+++ b/CoffeeManagement/CoffeeManagement/UserPage.resx
@@ -141,4 +141,81 @@
   <metadata name="Column3.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAMMOAADDDgAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABIAAAA0QAAAPgAAAD5AAAA+QAAAPkAAAD5AAAA+QAA
+        APkAAAD5AAAA+QAAAPkAAAD5AAAA+QAAAPkAAADkAAAAbQAAAAUAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAJwAAANQAAACnAAAAUQAAAEsAAABLAAAASwAA
+        AEsAAABLAAAASwAAAEsAAABLAAAASwAAAEsAAABLAAAATAAAAIgAAADjAAAAUAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABEAAABVAAAAgAAAAIIAAAC0AAAAzwAAABgAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAAAKMAAADPAAAAhAAA
+        AIMAAABlAAAAHwAAAAAAAAAAAAAAAAAAAAAAAAAiAAAAsgAAAOAAAAC+AAAAuQAAALsAAABzAAAAAgAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAATAAA
+        ALcAAAC5AAAAuwAAANcAAADPAAAAPQAAAAAAAAAAAAAAAAAAAKcAAADJAAAALgAAAAMAAAACAAAAAgAA
+        AAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAgAAAAIAAAACAAAAGQAAAKQAAADBAAAAEQAAAAAAAAAAAAAA8wAAAL4AAAB/AAAAgAAA
+        AH8AAACCAAAAggAAAIAAAACAAAAAhAAAAIQAAACEAAAAhAAAAIQAAACEAAAAhAAAAIQAAACEAAAAhAAA
+        AIQAAACDAAAAgAAAAIEAAACDAAAAgwAAAIMAAACAAAAApAAAAO4AAAA7AAAAAAAAAAAAAACoAAAAtwAA
+        AMAAAAD0AAAA/gAAAM4AAADWAAAA/QAAAOwAAAC7AAAAuQAAALkAAAC5AAAAuQAAALkAAAC5AAAAuQAA
+        ALkAAAC5AAAAuAAAAMgAAAD7AAAA4wAAALgAAAC5AAAAuQAAALkAAAC5AAAAqgAAACgAAAAAAAAAAAAA
+        AAQAAAADAAAAPAAAAOkAAAD2AAAAbwAAABMAAACCAAAA4wAAAEYAAAADAAAABgAAAAYAAAAGAAAABgAA
+        AAYAAAAGAAAABgAAAAYAAAAFAAAAEAAAAJYAAADbAAAANgAAAAMAAAAGAAAABgAAAAYAAAAFAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAABSAAAA2gAAAJ0AAADfAAAAfgAAACgAAACqAAAApwAAAAMAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEgAAALMAAAC2AAAAEAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADcAAADgAAAATwAAAGwAAADRAAAAwwAAAIsAAADNAAAAEQAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMgAAAN0AAABtAAAADQAA
+        ABAAAAAKAAAAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACQAAAKkAAAC/AAAAJAAAAB4AAADIAAAA6wAA
+        AL8AAAAMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgwAA
+        AOwAAADMAAAAzQAAAMMAAACOAAAAMAAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAPwAAAPEAAADaAAAAmAAA
+        ANMAAAD3AAAAZQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAArAAAA5AAAAKMAAABiAAAAewAAAMEAAADeAAAAVwAAAAEAAAAAAAAAAAAAAAAAAABfAAAA2wAA
+        AH8AAACqAAAApAAAAFYAAAAHAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAUAAACvAAAApAAAACwAAAAZAAAADgAAAIUAAADdAAAAQAAAAAAAAAAAAAAAAAAA
+        AJYAAACuAAAAAwAAAAIAAAACAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHQAAAD5AAAA4gAAANgAAABkAAAADgAAALMAAAC1AAAAAAAA
+        AAAAAAAGAAAAuAAAAIcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAATwAAAOMAAABOAAAAfwAAAN0AAAAmAAAAYgAA
+        AO4AAAAAAAAAAAAAAAwAAADHAAAAcQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA8AAAA3gAAACkAAAAoAAAA4AAA
+        AD8AAABLAAAA9wAAAAAAAAAAAAAADgAAAMsAAABrAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADYAAADmAAAAgwAA
+        AKsAAADPAAAAGgAAAHEAAADnAAAAAAAAAAAAAAAOAAAAywAAAGsAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAANQAA
+        AO0AAADYAAAAsgAAADwAAAAaAAAAyAAAAJwAAAAAAAAAAAAAAA4AAADLAAAAawAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAA2AAAA4AAAADwAAAAHAAAAKAAAALAAAADMAAAAKAAAAAAAAAAAAAAADgAAAMoAAADJAAAAnQAA
+        AJ8AAACfAAAAnwAAAJ8AAACfAAAAnAAAADUAAAAKAAAAcgAAACAAAAAYAAAAjwAAAKAAAACfAAAAnwAA
+        AJ8AAACfAAAAngAAALQAAADzAAAAsAAAALAAAADeAAAAwAAAADQAAAAAAAAAAAAAAAAAAAAEAAAAbQAA
+        AKEAAAChAAAAoQAAAKEAAAChAAAAoQAAAKEAAACeAAAANgAAAAoAAABzAAAAIQAAABkAAACRAAAAogAA
+        AKEAAAChAAAAoQAAAKEAAAChAAAAoAAAAJ0AAACgAAAAkgAAAFoAAAAUAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAAQAAAAAAAAAAAAAAAAAAAAQAAAABAAAAAAAA
+        AAAAAAAAAAAABAAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEwAAAJgAAAA8AAAAAAAAAAAAAAAQAAAAlgAA
+        AEUAAAAAAAAAAAAAAAwAAACSAAAASQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAJAAAArAAAAKoAAAAEAAAAAAAA
+        AAYAAACeAAAAvwAAAA4AAAAAAAAABAAAAJwAAAC6AAAACQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB5AAAAxQAA
+        AAsAAAAAAAAAAAAAAEAAAADfAAAALAAAAAAAAAAAAAAAZgAAANIAAAATAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHAAA
+        AMcAAACUAAAAAQAAAAAAAAAAAAAARAAAAN8AAAAqAAAAAAAAABQAAAC6AAAApQAAAAQAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAB8AAAA0QAAACQAAAAAAAAAAAAAAA4AAACqAAAAtwAAAAsAAAAAAAAAagAAANoAAAAuAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAQAAAKcAAACeAAAAAAAAAAAAAAAAAAAAcAAAAN0AAAA6AAAAAAAAAAAAAACVAAAArwAA
+        AAMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAewAAANIAAAAdAAAAAAAAAAkAAAC/AAAAhgAAAAAAAAAAAAAAAAAA
+        AGkAAADaAAAAKAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAcAAAAggAAACAAAAAAAAAADgAAAMsAAABvAAAAAAAA
+        AAAAAAAAAAAAFAAAAIAAAAApAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAAAAngAA
+        ALcAAAAPAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAA8AAAA1gAAADgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA/AAA//gAAP+A//gPAP/8BwH//gMAAAADAAAAAwAAAAfAH/h/wB/8B8Af
+        /gHgP/4A4D/+AOD//wDH//8Ax///AMf//wDH//8Ax///AMAAAAHAAAAD/5zn//8Yx///CEP//4xj//8M
+        Q///GEf//jjH//8Rx///Ecf///D////4//8=
+</value>
+  </data>
 </root>
