new flat UI and database bug fixes

--- a/CoffeeManagement/CoffeeManagement/Form1.resx
+++ b/CoffeeManagement/CoffeeManagement/Form1.resx
@@ -118,27 +118,42 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="pictureLogo.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="pictureBox1.ErrorImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAHoAAAB6CAMAAABHh7fWAAAABGdBTUEAALGPC/xhBQAAAGNQTFRF////
-        AAAA4ODgxsbG+Pj4dHR02NjY6Ojoy8vL6+vrv7+/a2tr9fX1qampt7e3/Pz8PDw8ZGRkDw8PgoKCNDQ0
-        0dHRr6+vX19fn5+fmZmZHx8fFRUVUFBQLCwsWVlZRkZGkJCQhGbs4wAAA6BJREFUaEPtm2uDqiAQhlvT
-        vJSXtItdzP7/rzyZbycREFwY9ovPtxVhFoFh5oVWvyQ6/Hy41XjmhvgKu2+OeOoED0Z71njqhMX0YtoB
-        i+nFtANCGO1x6MPj6AKjPYegTjY5CgnxTvcGJoeURZCEeIUEP9nDlIhym+zwonXSAkakNM8Y71plEJlM
-        UVnvuR+gaTWWI6YjExIpKDaoZYMTGtUlRT1zUrSozxY1TZnb54476pqxRmvzOKG2CexeoY2F4fb1lvOY
-        EtVNqNDWTDJUN2CDpmbSoroJZ7Q1oiz2aRZtjlkaFCJvE6G6AeI51tQeyjvCJChR8GGPIhOEI82vmzy7
-        o6zHhidFU0PO4oDk+ED5iwrPTBB4kwBFPOtP+HKzsWmzQVjHlIP0MTxWdk0uHiqnR3Hd+Z/Gx18m5Ny6
-        Ue1I8bm0sbBWqx0MfklQIie0EyDFMPhluJ5J4RxKSRprD2ETnA5nveY/uLP8ip9mF5SQwy+uwsaa1YJP
-        sZx1+wmDA2yEezqIglFXSjDMMVQO0vgXW5hjeNjMqaQksDaiIkmjR4jUi46K3qVKuv3iTC5aCUe751DT
-        dj2eSnzKc0Tp3hT5R3Eh3M2USe4+Iet6BhNymguVYqYjK9AoZhrfvGNLM+ixJONkCUiM5+kN7U9RPkkm
-        XDjhXL60NFtLoiWrEMUSmY5xGymuiITN4YU8qGKJjVojvpPFMfFFpcmT9fuVG6wV61yuPVjAe8oCmDfq
-        bNgEfyQbseAlMjz5lLOgVCqIZRpqgxcokRl3Eqx7wulO5dRG1DA3xFU+LIqhXOkugkMh2qU9gN/Nnygh
-        h1ebSJ0pAyd+2DpmU8OJHzaOAvTgJpo709zatvDBd+3PXSOv4fyp+TTL21czjdIj59wOai419b25qTZB
-        /ljK2KX8d5GKSwj8zm3qSL3v6VkzJQvzCeHBNO9lYs9A2pHBf/jBdJaNPbNEsxIlwYZDLcjpBZpVKAwV
-        zEJxsYJzrYbXjfJIHBqa7Vs7aZJxbff1+wy5fsgSQDN9Q6CGa2MYmU1ds1JhuLIiNPMLjPN7tWAmwcKm
-        dURTM2ltCHie8nabgKvU6c1ip3/P7ENpTT078e55kptF3S6ctciMNyyWtf4dO/snUZnedGtIzkMmr5D2
-        lDWVcBQ+uwBRSkEmx3f4m7oVD/thG1Ea7gmjU8BulNdteqS3C9is0so9FF3+8Gr6Ynox7YDF9GLaAX/4
-        Y8nhDzHKX6k1q9U/234lt6dStAIAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAALCAYAAAAeEY8BAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAxhJREFUOE+VlDtoFEEYx2d25nKJxkrUFIJERIkpfCCCSCQPiZWggo2NvWKjtVqJ
+        gtiIj0q0srIIRouAVcRgImreMcnlLrm9x97u3j7vdm8fd/E/h5VIvHwwzNzczvx/873IvywzpRB5RpOU
+        FZMVloxEdkZrw5wspcx2Peskx55NkrAWkwjDVj3qOcEOjK6aGx6tVcL+oBqdcvXan9v+YzhAoqhOzEKF
+        VAwf65ioaSuRn9fbir+MhLJscgBI8pxOhZietRMfn0wIgATOnoboUK0anffdsA/jWOBFvaEfX1ibKtA/
+        ElsbDlEAUEf3mgAx1vqGndAyNi44ROQ5jcoLKlUzFtnc3CRG3uUNzIEf7YLYMF7eeYnca/4nBs53AK4v
+        t6i1BmCXqrxq13h+QWfqmsVspcqz06q09rVIlRWDw+1czZgsCusn6vXGXc+q7a/HjesQuuZqXgfcvRvr
+        W3jEyyiI7+B3V+hHgwBtDaC0akqllMUAkIDLeW5O5yuf8yQ9pUi5eR0gBaksO6xWDbsB8DMM4oeYZ6Og
+        fnV+LE0h/ghAS3HcuIH1FYRlLwCGjFyLAN/frUCsyCDO4PbmnJookNREnq3/KNHpDykGL7CRB18kvPA2
+        xG0IjvhOsNMqVpIQHofwW4SjG/NjJOZxAAy0DLD4KUsgILm6L2HNlJRJZkbTBJ5gasoSlcCRG3z81SLB
+        63sajU0VMb4JQWLILgPAa0DNA+o+csMAxDCSsL8sV1oDEOZZAUXc+cSbBaasms09eUal2rrNRV5gjxeX
+        ysiDeF8c1p97TtiPqqFmrsLw4sMQfwGI94B5Ci/1AGBwWwCZbwqZHl2jCEfzkL7hcH3dQck5pLBYpgCQ
+        4BFqFatSOeu2r08VKaqgE0JnXd1jveQyccseF1UA74j9oW0BpCeLAqCZD8IQP1H/og9wZdlg8A5FLyAi
+        THbJa9PStghHEmEYRNINow+cQzmfxDiIvQMAGN4WwN8mBOVZjUGcA6INXTEpOiHCkbSUalJ8A1c3696z
+        g3a/Eu7xnfAImtIZAF0ExIC+4Tbv2toI+Q0acaUpjXonTAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="pictureBox1.InitialImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAALCAYAAAAeEY8BAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAxhJREFUOE+VlDtoFEEYx2d25nKJxkrUFIJERIkpfCCCSCQPiZWggo2NvWKjtVqJ
+        gtiIj0q0srIIRouAVcRgImreMcnlLrm9x97u3j7vdm8fd/E/h5VIvHwwzNzczvx/873IvywzpRB5RpOU
+        FZMVloxEdkZrw5wspcx2Peskx55NkrAWkwjDVj3qOcEOjK6aGx6tVcL+oBqdcvXan9v+YzhAoqhOzEKF
+        VAwf65ioaSuRn9fbir+MhLJscgBI8pxOhZietRMfn0wIgATOnoboUK0anffdsA/jWOBFvaEfX1ibKtA/
+        ElsbDlEAUEf3mgAx1vqGndAyNi44ROQ5jcoLKlUzFtnc3CRG3uUNzIEf7YLYMF7eeYnca/4nBs53AK4v
+        t6i1BmCXqrxq13h+QWfqmsVspcqz06q09rVIlRWDw+1czZgsCusn6vXGXc+q7a/HjesQuuZqXgfcvRvr
+        W3jEyyiI7+B3V+hHgwBtDaC0akqllMUAkIDLeW5O5yuf8yQ9pUi5eR0gBaksO6xWDbsB8DMM4oeYZ6Og
+        fnV+LE0h/ghAS3HcuIH1FYRlLwCGjFyLAN/frUCsyCDO4PbmnJookNREnq3/KNHpDykGL7CRB18kvPA2
+        xG0IjvhOsNMqVpIQHofwW4SjG/NjJOZxAAy0DLD4KUsgILm6L2HNlJRJZkbTBJ5gasoSlcCRG3z81SLB
+        63sajU0VMb4JQWLILgPAa0DNA+o+csMAxDCSsL8sV1oDEOZZAUXc+cSbBaasms09eUal2rrNRV5gjxeX
+        ysiDeF8c1p97TtiPqqFmrsLw4sMQfwGI94B5Ci/1AGBwWwCZbwqZHl2jCEfzkL7hcH3dQck5pLBYpgCQ
+        4BFqFatSOeu2r08VKaqgE0JnXd1jveQyccseF1UA74j9oW0BpCeLAqCZD8IQP1H/og9wZdlg8A5FLyAi
+        THbJa9PStghHEmEYRNINow+cQzmfxDiIvQMAGN4WwN8mBOVZjUGcA6INXTEpOiHCkbSUalJ8A1c3696z
+        g3a/Eu7xnfAImtIZAF0ExIC+4Tbv2toI+Q0acaUpjXonTAAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
